--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     ]
   },
   "dependencies": {
+    "@casl/ability": "^5.2.2",
+    "@casl/react": "^2.2.2",
     "@chakra-ui/icons": "^1.0.11",
     "@chakra-ui/react": "^1.5.2",
     "@emotion/react": "^11",
