--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "@chakra-ui/react": "^1.5.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@svgr/webpack": "^5.5.0",
+    "axios": "^0.21.1",
     "framer-motion": "^4",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.3.6",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
