--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@svgr/webpack": "^5.5.0",
     "axios": "^0.21.1",
     "framer-motion": "^4",
-    "next": "latest",
+    "next": "^10.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.3.6",
