--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^0.21.1",
     "framer-motion": "^4",
     "next": "^10.2.0",
+    "nextjs-progressbar": "^0.0.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.3.6",
