--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,56 +1,50 @@
 {
-	"parser": "@typescript-eslint/parser",
-	"plugins": [
-		"@typescript-eslint",
-		"react-hooks"
-	],
-	"extends": [
-		"eslint:recommended",
-		"plugin:react/recommended",
-		"plugin:@typescript-eslint/recommended"
-		// Uncomment the following lines to enable eslint-config-prettier
-		// Is not enabled right now to avoid issues with the Next.js repo
-		// "prettier",
-	],
-	"env": {
-		"es6": true,
-		"browser": true,
-		"jest": true,
-		"node": true
-	},
-	"settings": {
-		"react": {
-			"version": "detect"
-		}
-	},
-	"rules": {
-		"react/react-in-jsx-scope": 0,
-		"react/display-name": 0,
-		"react/prop-types": 0,
-		"react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
-		"react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
-		"@typescript-eslint/explicit-function-return-type": "off",
-		"@typescript-eslint/explicit-module-boundary-types": "off",
-		"@typescript-eslint/explicit-member-accessibility": 0,
-		"@typescript-eslint/indent": 0,
-		"@typescript-eslint/member-delimiter-style": 0,
-		"@typescript-eslint/no-explicit-any": 0,
-		"@typescript-eslint/no-var-requires": 0,
-		"@typescript-eslint/no-use-before-define": 0,
-		"@typescript-eslint/no-unused-vars": [
-			2,
-			{
-				"argsIgnorePattern": "^_"
-			}
-		],
-		"no-console": [
-			2,
-			{
-				"allow": [
-					"warn",
-					"error"
-				]
-			}
-		]
-	}
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "react-hooks"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended"
+    // Uncomment the following lines to enable eslint-config-prettier
+    // Is not enabled right now to avoid issues with the Next.js repo
+    // "prettier",
+  ],
+  "env": {
+    "es6": true,
+    "browser": true,
+    "jest": true,
+    "node": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "rules": {
+    "react/react-in-jsx-scope": 0,
+    "react/display-name": 0,
+    "react/prop-types": 0,
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/explicit-member-accessibility": 0,
+    "@typescript-eslint/indent": 0,
+    "@typescript-eslint/member-delimiter-style": 0,
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/no-var-requires": 0,
+    "@typescript-eslint/no-use-before-define": 0,
+    "@typescript-eslint/no-unused-vars": [
+      2,
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    "no-console": [
+      2,
+      {
+        "allow": ["warn", "error"]
+      }
+    ]
+  }
 }
