--- a/package.json
+++ b/package.json
@@ -35,19 +35,23 @@
     "@svgr/webpack": "^5.5.0",
     "axios": "^0.21.1",
     "framer-motion": "^4",
+    "match-sorter": "^6.3.0",
     "next": "^10.2.0",
     "nextjs-progressbar": "^0.0.9",
     "nookies": "^2.5.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.3.6",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-table": "^7.7.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
+    "@types/react-table": "^7.7.0",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "babel-jest": "^26.6.3",
